--- a/动态规划/序列型.md
+++ b/动态规划/序列型.md
@@ -55,4 +55,48 @@ public class Solution {
 
 ## 最长单调子序列
 ### 描述
-给定a[0],...,a[n-1]，找到最长连续子序列i,i+1,i+2,...,j。
+给定a[0],...,a[n-1]，找到最长连续子序列i,i+1,i+2,...,j,   使得a[i]<a[i+1]<..<a[j]，或者a[i]>a[i+1]>..>a[j]，输出长度j-1+1，
+例子：输入[5,1,2,3,4]，输出：4（对应子序列1,2,3,4）
+
+### 解答
+```java
+public class Solution {
+
+    public int findMaxMonotonicSequence(int[] nums) {
+        // f(i) = max(1, (f(i-1) + 1) && (a[i-1] < a[i]))
+
+        // find longest monotonic sequence in original direction
+        int lengthOfOriginDirection = doFindMaxMonotonicSequence(nums);
+
+        // reverse nums
+        for (int idx = 0; idx < nums.length / 2; idx++) {
+            int tmp = nums[nums.length - 1 - idx];
+            nums[nums.length - 1 - idx] = nums[idx];
+            nums[idx] = tmp;
+        }
+
+        // find longest monotonic sequence in reverse direction
+        int lengthOfReverseDirection = doFindMaxMonotonicSequence(nums);
+
+        return Math.max(lengthOfOriginDirection, lengthOfReverseDirection);
+    }
+
+    public int doFindMaxMonotonicSequence(int[] nums) {
+        int[] dp = new int[nums.length + 1];
+
+        dp[0] = 1;
+
+        for (int idx = 1; idx < nums.length; idx++) {
+            dp[idx] = Math.max(1, (nums[idx - 1] < nums[idx]) ? dp[idx - 1] + 1 : 0);
+        }
+
+        return dp[nums.length - 1];
+    }
+
+    public static void main(String[] args) {
+        int[] nums = new int[]{5, 4, 3, 2, 1, 0, 1, 6, 3, 4};
+
+        System.out.println(new Solution().findMaxMonotonicSequence(nums));
+    }
+}
+```
