--- a/动态规划/坐标型.md
+++ b/动态规划/坐标型.md
@@ -62,3 +62,59 @@ public class Solution {
     }
 }
 ```
+
+## 最小路径和
+### 描述
+给定一个只含非负整数的m*n网格，找到一条从左上角到右下角的可以使数字和最小的路径。
+
+你在同一时间只能向下或者向右移动一步
+
+样例
+样例 1:
+
+输入:  [[1,3,1],[1,5,1],[4,2,1]]
+输出: 7	
+样例解释：
+路线为： 1 -> 3 -> 1 -> 1 -> 1。
+样例 2:
+
+输入:  [[1,3,2]]
+输出:  6
+解释:  
+路线是： 1 -> 3 -> 2
+
+### 解答
+```java
+public class Solution {
+    /**
+     * @param grid: a list of lists of integers
+     * @return: An integer, minimizes the sum of all numbers along its path
+     */
+    public int minPathSum(int[][] matrix) {
+        // f(i,j) = min(f(i-1, j), f(i, j-1)) + a[i][j]
+
+        if (matrix.length == 0 || matrix[0].length == 0) {
+            return 0;
+        }
+
+        int rows = matrix.length;
+        int cols = matrix[0].length;
+
+        int[][] dp = new int[rows][cols];
+
+        for (int i = 0; i < rows; i++) {
+            for (int j = 0; j < cols; j++) {
+                if (i == 0) {
+                    dp[0][j] += j > 0 ? dp[0][j - 1] + matrix[0][j] : matrix[0][0];
+                } else if (j == 0) {
+                    dp[i][0] += dp[i - 1][0] + matrix[i][0];
+                } else {
+                    dp[i][j] = Math.min(dp[i][j - 1], dp[i - 1][j]) + matrix[i][j];
+                }
+            }
+        }
+
+        return dp[rows - 1][cols - 1];
+    }
+}
+```
