--- a/动态规划/坐标型.md
+++ b/动态规划/坐标型.md
@@ -1,3 +1,7 @@
+# 额外的优化思路
+## 空间优化
+1. 对于迷宫路径问题，可以采用滚动数组方式，因为每次计算时，仅依赖上一行，与当前行的前一个位置，所以不需要O(MN)，只需要O(N)即可
+
 # 迷宫路径问题
 ## 1. 迷宫与障碍
 现在考虑网格中有障碍物，那样将会有多少条不同的路径？
