--- a/动态规划/坐标型.md
+++ b/动态规划/坐标型.md
@@ -1,6 +1,6 @@
 # 额外的优化思路
 ## 空间优化
-1. 对于迷宫路径问题，可以采用**滚动数组**方式，因为每次计算时，仅依赖上一行，与当前行的前一个位置，所以不需要O(MN)，只需要O(N)即可
+1. 对于迷宫路径问题，可以采用**滚动数组**方式，因为每次计算时，仅依赖上一行，与当前行的前一个位置，所以不需要O(MN)，只需要O(N)即可。对于行数很多的场景，可以按列数开滚动数组，对于列数很多的场景，可以按行数开滚动数组。
 
 # 迷宫路径问题
 ## 1. 迷宫与障碍
