--- a/动态规划/坐标型.md
+++ b/动态规划/坐标型.md
@@ -123,3 +123,158 @@ public class Solution {
     }
 }
 ```
+
+## 迷宫炸弹
+### 描述
+给定一个二维矩阵, 每一个格子可能是一堵墙 W,或者 一个敌人 E 或者空 0 (数字 '0'), 返回你可以用一个炸弹杀死的最大敌人数. 炸弹会杀死所有在同一行和同一列没有墙阻隔的敌人。 由于墙比较坚固，所以墙不会被摧毁.你只能在空的地方放置炸弹.
+
+样例
+样例1
+
+输入:
+grid =[
+     "0E00",
+     "E0WE",
+     "0E00"
+]
+输出: 3
+解释:
+把炸弹放在 (1,1) 能杀3个敌人
+
+样例2
+
+输入:
+grid =[
+     "0E00",
+     "EEWE",
+     "0E00"
+]
+输出: 2
+解释:
+P把炸弹放在 (0,0) 或 (0,3) 或 (2,0) 或 (2,3) 能杀2个敌人
+### 解答
+```java
+    public int boomEnemy(char[][] grid) {
+        if (null == grid || grid.length == 0 || grid[0].length == 0) {
+            return 0;
+        }
+
+        int rows = grid.length;
+        int cols = grid[0].length;
+
+        char[][] matrix = grid;
+        int[][] dp = new int[rows][cols];
+        int[][] result = new int[rows][cols];
+
+        /**
+         * up
+         * f(i,j) = {
+         *      0,  // if a[i][j] is wall
+         *      f[i-1][j] + (a[i][j] is enemy ? 1 : 0),
+         *    }
+         */
+        for (int i = 0; i < rows; i++) {
+            for (int j = 0; j < cols; j++) {
+                if (matrix[i][j] == 'W') {
+                    dp[i][j] = 0;
+                } else {
+                    int tmp = 0;
+                    if (matrix[i][j] == 'E') {
+                        tmp = 1;
+                    }
+
+                    dp[i][j] = tmp + (i > 0 ? dp[i - 1][j] : 0);
+                }
+
+                result[i][j] += dp[i][j];
+            }
+        }
+
+        /**
+         * down
+         * f(i,j) = {
+         *      0,  // if a[i][j] is wall
+         *      f[i+1][j] + (a[i][j] is space ? 1 : 0)
+         *    }
+         */
+        dp = new int[rows][cols];
+        for (int i = rows - 1; i >= 0; i--) {
+            for (int j = 0; j < cols; j++) {
+                if (matrix[i][j] == 'W') {
+                    dp[i][j] = 0;
+                } else {
+                    int tmp = 0;
+                    if (matrix[i][j] == 'E') {
+                        tmp = 1;
+                    }
+
+                    dp[i][j] = tmp + ((i + 1) < rows ? dp[i + 1][j] : 0);
+                }
+
+                result[i][j] += dp[i][j];
+            }
+        }
+
+        /**
+         * left
+         * f(i,j) = {
+         *      0,  // if a[i][j] is wall
+         *      f[i][j-1] + (a[i][j] is space ? 1 : 0)
+         *    }
+         */
+        dp = new int[rows][cols];
+        for (int i = 0; i < rows; i++) {
+            for (int j = 0; j < cols; j++) {
+                if (matrix[i][j] == 'W') {
+                    dp[i][j] = 0;
+                } else {
+                    int tmp = 0;
+                    if (matrix[i][j] == 'E') {
+                        tmp = 1;
+                    }
+
+                    dp[i][j] = tmp + (j > 0 ? dp[i][j - 1] : 0);
+                }
+
+                result[i][j] += dp[i][j];
+            }
+        }
+
+        /**
+         * right
+         * f(i,j) = {
+         *      0,  // if a[i][j] is wall
+         *      f[i][j+1] + (a[i][j] is space ? 1 : 0)
+         *    }
+         */
+        dp = new int[rows][cols];
+        for (int i = 0; i < rows; i++) {
+            for (int j = cols - 1; j >= 0; j--) {
+                if (matrix[i][j] == 'W') {
+                    dp[i][j] = 0;
+                } else {
+                    int tmp = 0;
+                    if (matrix[i][j] == 'E') {
+                        tmp = 1;
+                    }
+
+                    dp[i][j] = tmp + ((j + 1) < cols ? dp[i][j + 1] : 0);
+                }
+
+                result[i][j] += dp[i][j];
+            }
+        }
+
+        int maxBoomedEnemies = 0;
+        for (int i = 0; i < rows; i++) {
+            for (int j = 0; j < cols; j++) {
+                if (matrix[i][j] == '0') {
+                    maxBoomedEnemies = Math.max(maxBoomedEnemies, result[i][j]);
+                }
+            }
+        }
+
+
+        return maxBoomedEnemies;
+    }
+```
