--- a/动态规划/坐标型.md
+++ b/动态规划/坐标型.md
@@ -1,7 +1,7 @@
 # 坐标型动态规划
 1. 给定输入为序列或者网格/矩阵
 2. 动态规划状态下标为序列下标i或者网格坐标(i,j)
-   * &f[i]: 以第i个元素结尾的某种性质
+   * f[i]: 以第i个元素结尾的某种性质
    * f[i][j]: 到格子(i,j)的路径的性质
 3. 初始化设置f[0]的值/f[0][0...n-1]的值
 4. 对于迷宫路径问题，可以采用**滚动数组**方式，因为每次计算时，仅依赖上一行，与当前行的前一个位置，所以不需要O(MN)，只需要O(N)即可。对于行数很多的场景，可以按列数开滚动数组，对于列数很多的场景，可以按行数开滚动数组。
