--- a/动态规划/序列型.md
+++ b/动态规划/序列型.md
@@ -1,4 +1,10 @@
 # 序列型
+## 特征
+1. 给定一个序列
+2. 动态规划方程f[i]中的下标i表示前i个元素a[0],a[1],...,a[i-1]的某种性质
+3. 初始化时，f[0]表示空序列的性质
+
+
 ## 房屋染色1
 序列+状态，当每个dp位置都可能有可穷举的几种状态得出时，可以用此解法
 ### 描述
@@ -100,4 +106,85 @@ public class Solution {
         System.out.println(new Solution().findMaxMonotonicSequence(nums));
     }
 }
+```
+
+## 房屋染色2
+### 描述
+这里有n个房子在一列直线上，现在我们需要给房屋染色，共有k种颜色。每个房屋染不同的颜色费用也不同，你希望每两个相邻的房屋颜色不同费用通过一个nxk 的矩阵给出，比如cost[0][0]表示房屋0染颜色0的费用,cost[1][2]表示房屋1染颜色2的费用。找到油漆所有房子的最低成本。(所有费用都是正整数)
+
+样例
+
+样例1
+
+输入:
+costs = [[14,2,11],[11,14,5],[14,3,10]]
+输出: 10
+说明:
+三个屋子分别使用第1,2,1种颜色，总花费是10。
+样例2
+
+输入:
+costs = [[5]]
+输出: 5
+说明：
+只有一种颜色，一个房子，花费为5
+
+### 解答
+```java
+package com.xz.quiz.lintcode.dp.painthouse2;
+
+public class Solution {
+    public int minimumCost(int[][] costs) {
+        if (costs.length == 0 || costs[0].length == 0) {
+            return 0;
+        }
+
+        int houses = costs.length;
+        int colors = costs[0].length;
+
+        /**
+         * f[i][j] = min {
+         *     f[i-1][0],
+         *     f[i-1][1],
+         *     ...
+         *     f[i-1][j-1]
+         *     f[i-1][j-2]
+         *     ...
+         *     f[i-1][k]
+         * } + cost[i-1][j]
+         */
+
+        int[][] dp = new int[houses + 1][colors];
+        for (int houseIdx = 1; houseIdx <= houses; houseIdx++) {
+            for (int colorIdx = 0; colorIdx < colors; colorIdx++) {
+                int minCost = Integer.MAX_VALUE;
+                for (int i = 0; i < colors; i++) {
+                    if (colorIdx == i) {
+                        continue;
+                    }
+                    minCost = Math.min(dp[houseIdx - 1][i], minCost);
+                }
+
+                dp[houseIdx][colorIdx] = (minCost == Integer.MAX_VALUE ? 0 : minCost) + costs[houseIdx - 1][colorIdx];
+            }
+        }
+
+        int minCost = Integer.MAX_VALUE;
+        for (int colorIdx = 0; colorIdx < colors; colorIdx++) {
+            minCost = Math.min(dp[houses][colorIdx], minCost);
+        }
+
+        return minCost;
+    }
+
+    public static void main(String[] args) {
+        int[][] costs = new int[][]{
+                {
+                        5
+                }
+        };
+        System.out.println(new Solution().minimumCost(costs));
+    }
+}
+
 ```
