--- a/动态规划/序列型.md
+++ b/动态规划/序列型.md
@@ -157,16 +157,50 @@ public class Solution {
 
         int[][] dp = new int[houses + 1][colors];
         for (int houseIdx = 1; houseIdx <= houses; houseIdx++) {
-            for (int colorIdx = 0; colorIdx < colors; colorIdx++) {
-                int minCost = Integer.MAX_VALUE;
-                for (int i = 0; i < colors; i++) {
-                    if (colorIdx == i) {
-                        continue;
-                    }
-                    minCost = Math.min(dp[houseIdx - 1][i], minCost);
-                }
+            // O(M^2)
+//            for (int colorIdx = 0; colorIdx < colors; colorIdx++) {
+//                int minCost = Integer.MAX_VALUE;
+//                for (int i = 0; i < colors; i++) {
+//                    if (colorIdx == i) {
+//                        continue;
+//                    }
+//                    minCost = Math.min(dp[houseIdx - 1][i], minCost);
+//                }
+//
+//                dp[houseIdx][colorIdx] = (minCost == Integer.MAX_VALUE ? 0 : minCost) + costs[houseIdx - 1][colorIdx];
+//            }
 
-                dp[houseIdx][colorIdx] = (minCost == Integer.MAX_VALUE ? 0 : minCost) + costs[houseIdx - 1][colorIdx];
+            // O(M)
+            // given a[0]~a[n], a[i]=min(a[0], .., a[n]), a[j]=secondMin(a[0], .., a[n])
+            // let's say we remove a[k], 0<=k<=n
+            // if k != i, min(a[0],..,a[k-1],a[k],.. a[n]) is still a[i]
+            // if k = i,  min(a[0],..,a[k-1],a[k],.. a[n]) still a[j]
+            int minIdx = -1;
+            int min = Integer.MAX_VALUE;
+            int lastMinIdx = -1;
+            int lastMin = Integer.MAX_VALUE;
+            for (int colorIdx = 0; colorIdx < colors; colorIdx++) {
+                if (dp[houseIdx - 1][colorIdx] < min) {
+                    lastMin = min;
+                    lastMinIdx = minIdx;
+                    min = dp[houseIdx - 1][colorIdx];
+                    minIdx = colorIdx;
+                } else if (dp[houseIdx - 1][colorIdx] < lastMin) {
+                    lastMin = dp[houseIdx - 1][colorIdx];
+                    lastMinIdx = colorIdx;
+                }
+            }
+
+            if (lastMinIdx == -1) {
+                lastMinIdx = minIdx;
+            }
+
+            for (int colorIdx = 0; colorIdx < colors; colorIdx++) {
+                if (colorIdx == minIdx) {
+                    dp[houseIdx][colorIdx] = dp[houseIdx - 1][lastMinIdx] + costs[houseIdx - 1][colorIdx];
+                } else {
+                    dp[houseIdx][colorIdx] = dp[houseIdx - 1][minIdx] + costs[houseIdx - 1][colorIdx];
+                }
             }
         }
 
