--- a/动态规划/序列型.md
+++ b/动态规划/序列型.md
@@ -223,3 +223,59 @@ public class Solution {
 }
 
 ```
+
+## 搜刮房子
+### 描述
+假设你是一个专业的窃贼，准备沿着一条街打劫房屋。每个房子都存放着特定金额的钱。你面临的唯一约束条件是：相邻的房子装着相互联系的防盗系统，且 当相邻的两个房子同一天被打劫时，该系统会自动报警。
+给定一个非负整数列表，表示每个房子中存放的钱， 算一算，如果今晚去打劫，在不触动报警装置的情况下, 你最多可以得到多少钱 。
+
+样例
+
+样例 1:
+
+输入: [3, 8, 4]
+输出: 8
+解释: 仅仅打劫第二个房子.
+
+样例 2:
+
+输入: [5, 2, 1, 3] 
+输出: 8
+解释: 抢第一个和最后一个房子
+
+### 解答
+```java
+public class Solution {
+    public long houseRobber(int[] A) {
+        // f[i] = max(
+        //      f[i-2] + a[i-1],
+        //      f[i-1]
+        // )
+        if (A == null || A.length == 0) {
+            return 0;
+        }
+
+        int houses = A.length;
+        if (houses == 1) {
+            return A[0];
+        }
+
+        long[] dp = new long[houses + 1];
+        dp[0] = 0;
+        dp[1] = A[0];
+
+        for (int i = 2; i <= houses; i++) {
+            dp[i] = Math.max(dp[i - 2] + A[i - 1], dp[i - 1]);
+        }
+
+        return dp[houses];
+    }
+
+
+    public static void main(String[] args) {
+        int[] houses = new int[]{5, 2, 1, 3};
+
+        System.out.println(new Solution().houseRobber(houses));
+    }
+}
+```
