--- a/动态规划/序列型.md
+++ b/动态规划/序列型.md
@@ -279,3 +279,9 @@ public class Solution {
     }
 }
 ```
+
+### 进一步思考
+如果房子是成圈而不是一排排列的，那么a[0]与a[n-1]成为邻居，不能同时偷，则需要计算两种情况
+1. 0不偷，则计算a[1]..a[n-1]的最优策略
+2. n-1不偷，则计算a[0]...a[n-2]的最优策略
+取上述最大值即可
