--- a/动态规划/坐标型.md
+++ b/动态规划/坐标型.md
@@ -283,3 +283,142 @@ P把炸弹放在 (0,0) 或 (0,3) 或 (2,0) 或 (2,3) 能杀2个敌人
         return maxBoomedEnemies;
     }
 ```
+
+## 最长单调递增序列
+### 描述
+给定一个整数序列，找到最长上升子序列（LIS），返回LIS的长度。
+
+说明
+最长上升子序列的定义：
+
+最长上升子序列问题是在一个无序的给定序列中找到一个尽可能长的由低到高排列的子序列，这种子序列不一定是连续的或者唯一的。
+https://en.wikipedia.org/wiki/Longest_increasing_subsequence
+
+样例
+
+样例 1:
+	输入:  [5,4,1,2,3]
+	输出:  3
+	
+	解释:
+	LIS 是 [1,2,3]
+
+
+样例 2:
+	输入: [4,2,4,5,3,7]
+	输出:  4
+	
+	解释: 
+	LIS 是 [2,4,5,7]
+### 解答
+```java
+    /**
+     * @param nums: An integer array
+     * @return: The length of LIS (longest increasing subsequence)
+     */
+    public int longestIncreasingSubsequence(int[] nums) {
+        // write your code here
+
+        // f[j] = max(
+        //      1,
+        //      f[i] + 1, 其中i < j && a[i] < a[j]，numerate i
+        // )
+
+        if (nums == null || nums.length == 0) {
+            return 0;
+        }
+
+        if (nums.length == 1) {
+            return 1;
+        }
+
+        int[] dp = new int[nums.length];
+        dp[0] = 1;
+
+        int result = 0;
+        for (int j = 1; j < nums.length; j ++) {
+            dp[j] = 1;
+            for (int i = j - 1; i >= 0; i--) {
+                if (nums[i] < nums[j] && (dp[i] + 1 > dp[j])) {
+                    dp[j] = dp[i] + 1;
+                }
+            }
+
+            result = Math.max(dp[j], result);
+        }
+
+
+        return result;
+    }
+
+```
+
+
+## 信封嵌套
+### 描述
+给一定数量的信封，带有整数对 (w, h) 分别代表信封宽度和高度。一个信封的宽高均大于另一个信封时可以放下另一个信封。
+求最大的信封嵌套层数。
+
+样例
+
+样例 1:
+
+输入：[[5,4],[6,4],[6,7],[2,3]]
+输出：3
+解释：
+最大的信封嵌套层数是 3 ([2,3] => [5,4] => [6,7])。
+
+样例 2:
+
+输入：[[4,5],[4,6],[6,7],[2,3],[1,1]]
+输出：4
+解释：
+最大的信封嵌套层数是 4 ([1,1] => [2,3] => [4,5] / [4,6] => [6,7])。
+
+### 解答
+```java
+    /**
+     * @param envelopes: a number of envelopes with widths and heights
+     * @return: the maximum number of envelopes
+     */
+    public int maxEnvelopes(int[][] envelopes) {
+        // write your code here
+
+        // f[j] = max(
+        //      1,
+        //      f[i] + 1, 其中i < j && a[i][0] < a[j][0] && a[i][1] < a[j][1]，numerate i
+        // )
+        // get max f[j]
+
+        if (envelopes == null || envelopes.length == 0) {
+            // no envelops available
+            return 0;
+        }
+
+        Arrays.sort(envelopes, (o1, o2) -> {
+            int sub = o1[0] - o2[0];
+            return sub != 0 ? sub : o1[1] - o2[1];
+        });
+
+
+        int[] dp = new int[envelopes.length];
+        dp[0] = 1;
+
+        int result = 0;
+
+        for (int i = 1; i < envelopes.length; i ++) {
+            dp[i] = 1;
+            for (int j = i - 1; j >= 0; j--) {
+                if (envelopes[j][0] < envelopes[i][0]
+                        && envelopes[j][1] < envelopes[i][1]
+                        && (dp[j] + 1) > dp[i]) {
+                    dp[i] = dp[j] + 1;
+                }
+            }
+
+            result = Math.max(result, dp[i]);
+        }
+
+        return result;
+    }
+```
