--- a/动态规划/划分型.md
+++ b/动态规划/划分型.md
@@ -1,5 +1,5 @@
-# 字符串解码
-## 1. 解码方法
+# 划分型
+## 字符串解码
 ### 描述
 有一个消息包含A-Z通过以下规则编码
 
@@ -59,4 +59,52 @@ public class Solution {
         return dp[n];
     }
 }
+```
+
+## 完美平方
+### 描述
+给一个正整数 n, 请问最少多少个完全平方数(比如1, 4, 9...)的和等于n。
+
+样例
+
+样例 1:
+
+输入: 12
+输出: 3
+解释: 4 + 4 + 4
+
+样例 2:
+
+输入: 13
+输出: 2
+解释: 4 + 9
+### 解答
+```java
+    /**
+     * @param n: a positive integer
+     * @return: An integer
+     */
+    public int numSquares(int n) {
+        // write your code here
+        // f[i] = min(f[i-j^2] + 1), enumerate j,  0<j*j<i
+
+        if (n == 0) {
+            return 0;
+        }
+
+        int[] dp = new int[n + 1];
+        dp[0] = 0;
+
+        for (int i = 1; i <= n; i++) {
+            dp[i] = Integer.MAX_VALUE;
+            for (int j = 1; j * j <= i; j++) {
+                int tmp = dp[i - j * j] + 1;
+                if (tmp < dp[i]) {
+                    dp[i] = tmp;
+                }
+            }
+        }
+
+        return dp[n];
+    }
 ```
