--- a/动态规划/划分型.md
+++ b/动态规划/划分型.md
@@ -108,3 +108,76 @@ public class Solution {
         return dp[n];
     }
 ```
+
+
+## 划分回文串
+### 描述
+给定字符串 s, 需要将它分割成一些子串, 使得每个子串都是回文串.
+
+最少需要分割几次?
+
+样例
+
+Example 1:
+
+Input:
+"a"
+Output:
+0
+Explanation:
+"a" is already a palindrome, no need to split.
+
+Example 2:
+
+Input: 
+"aab"
+Output:
+1
+Explanation:
+Split "aab" once, into "aa" and "b", both palindrome.
+### 解答
+```java 
+    /**
+     * @param s: A string
+     * @return: An integer
+     */
+    public int minCut(String s) {
+        // write your code here
+        // f[i] = min(f[j] + 1 && s[i-j:i])), 0<=j<=i, f[i] refers to split methods of s[0:i-1]
+
+        if (s == null || s.length() <= 1) {
+            return 0;
+        }
+
+        int[] dp = new int[s.length() + 1];
+        dp[0] = 0;
+        dp[1] = 0;
+
+        for (int i = 2; i <= s.length(); i++) {
+            dp[i] = Integer.MAX_VALUE;
+            for (int j = i - 1; j >= 0; j--) {
+                if (isPalindrome(s.substring(j, i))) {
+                    dp[i] = Math.min(dp[i], dp[j] + ((j == 0 && i - j > 1) ? 0 : 1));
+                }
+            }
+        }
+
+        return dp[s.length()];
+    }
+
+    private boolean isPalindrome(String s) {
+        if (s.length() == 1) {
+            return true;
+        }
+
+        for (int i = 0; i < s.length() / 2; i++) {
+            if (s.charAt(i) == s.charAt(s.length() - i - 1)) {
+                continue;
+            }
+
+            return false;
+        }
+
+        return true;
+    }
+```
