--- a/动态规划/划分型.md
+++ b/动态规划/划分型.md
@@ -181,3 +181,74 @@ Split "aab" once, into "aa" and "b", both palindrome.
         return true;
     }
 ```
+
+## 书籍抄写
+### 描述
+给定n本书，第i本书有[i]页。有k个人来抄这些书。
+
+这些书排成一行，每个人都可以索取连续一段的书。例如，一个复印机可以连续地将书从第i册复制到第j册，但是他不能复制第1册、第2册和第4册（没有第3册）。
+
+他们在同一时间开始抄书，每抄一页书都要花1分钟。为了让最慢的复印机能在最早的时间完成书的分配，最好的策略是什么？
+
+请返回最慢复印机花费的最短时间。
+
+书籍页数总和小于等于2147483647
+
+样例
+
+样例 1:
+
+输入: pages = [3, 2, 4], k = 2
+输出: 5
+解释: 第一个人复印前两本书, 耗时 5 分钟. 第二个人复印第三本书, 耗时 4 分钟.
+
+样例 2:
+
+输入: pages = [3, 2, 4], k = 3
+输出: 4
+解释: 三个人各复印一本书.
+### 解答
+```java
+    /**
+     * @param pages: an array of integers
+     * @param k:     An integer
+     * @return: an integer
+     */
+    public int copyBooks(int[] pages, int K) {
+        // write your code here
+
+        // f[k] = min(j from 0~i max(f[k-1], sum(pages[j:i])))
+
+        if (pages == null || pages.length == 0) {
+            return 0;
+        }
+
+        if (K > pages.length) {
+            K = pages.length;
+        }
+
+
+        int[][] dp = new int[K + 1][pages.length + 1];
+        dp[0][0] = 0;
+        for (int i = 1; i <= pages.length; i++) {
+            dp[0][i] = Integer.MAX_VALUE;
+        }
+
+        for (int k = 1; k <= K; k++) {
+            dp[k][0] = 0;
+            for (int i = 1; i <= pages.length; i++) {
+                dp[k][i] = Integer.MAX_VALUE;
+
+                int sum = 0;
+                for (int j = i; j >= 0; j--) {
+                    dp[k][i] = Math.min(dp[k][i], Math.max(dp[k - 1][j], sum));
+                    if (j > 0) {
+                        sum += pages[j - 1];
+                    }
+                }
+            }
+        }
+
+        return dp[K][pages.length];
+    }
+```
