--- a/动态规划/划分型.md
+++ b/动态规划/划分型.md
@@ -230,11 +230,13 @@ Split "aab" once, into "aa" and "b", both palindrome.
 
         int[][] dp = new int[K + 1][pages.length + 1];
         dp[0][0] = 0;
+        // zero copier can't finish any copy tasks
         for (int i = 1; i <= pages.length; i++) {
             dp[0][i] = Integer.MAX_VALUE;
         }
 
         for (int k = 1; k <= K; k++) {
+            // zero books can be finished in 0 time
             dp[k][0] = 0;
             for (int i = 1; i <= pages.length; i++) {
                 dp[k][i] = Integer.MAX_VALUE;
